--- a/nexon_assignment_server/package.json
+++ b/nexon_assignment_server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "node",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "bin": {
     "node": "bin/www.js"
@@ -77,5 +76,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
